k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow
  namespace: wisecow
  labels:
    app: wisecow
  annotations:
    service.beta.kubernetes.io/aws-load-balancer-type: "nlb"
spec:
  type: ClusterIP
  selector:
    app: wisecow
  ports:
  - name: http
    port: 80
    targetPort: 4499
    protocol: TCP
  sessionAffinity: None
